# netease_cloud_app

./: .gitignore  .prettierignore  .prettierrc  README.md  next.config.js  package.json  tsconfig.json
.github/: build.yml
.github/workflows/: Build.yml
components/carousel/: index.tsx
components/form/Input/: Index.tsx
components/layout/: constant.ts  container.tsx  content.tsx  index.tsx  layout.module.scss
components/layout/footer/: index.tsx
components/layout/header/: Header.module.scss  index.tsx
components/layout/sider/: Sider.module.scss  index.tsx
components/pages/Home/: index.tsx
frontend/: Cargo.toml  Trunk.toml  docker-compose.yml  index.html  package.json
frontend/public/: index.scss
frontend/src/: lib.rs  routes.rs
frontend/src/components/: mod.rs
frontend/src/components/atoms/: layout.rs
frontend/src/components/common/: carousel.rs  mod.rs
frontend/src/components/layout/: content.rs  mod.rs  sider.rs
frontend/src/contexts/: theme.rs
frontend/src/pages/: home.rs  todo_list.rs
pages/: _app.tsx  cloud.tsx  download.tsx  favorite.tsx  fm.tsx  follow.tsx  index.tsx  itunes.tsx  my_collection.tsx  my_podcast.tsx  podcast.tsx  recent_plays.tsx  videos.tsx
services/: axios.ts
src-tauri/: tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  menus.rs  system_tray.rs
store/: actions.ts  index.ts
store/slices/: index.ts
store/slices/auth/: index.ts
styles/: globals.scss  var.scss
typings/: index.d.ts
